# wurfl-microservice-client-rust

./: CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES
examples/: example.rs  web_server_example.rs
src/: cache.rs  lib.rs  model.rs  wmclient.rs
tests/: cache_test.rs  wmclient_test.rs
