[package]
name = "wmclient"
version = "0.1.0"
authors = ["Andrea Castello <support@scientiamobile.com>"]
edition = "2018"

[dependencies]
ureq = { version = "*", features = ["json", "charset"] }
lru = "0.6.6"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
md5 = "0.7.0"
# the following dependencies are needed to make the hyper example work.
# you can comment them you don't want to keep or use it.
hyper = { version = "0.14.13", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }