[package]
name = "wmclient"
version = "0.1.0"
authors = ["Andrea Castello <support@scientiamobile.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.scientiamobile.com"
repository = "https://github.com/WURFL/wurfl-microservice-client-rust"
readme = "README.md"
description = "WURFL Microservice (by ScientiaMobile, Inc.) is a mobile device detection service that can quickly and accurately detect over 500 capabilities of visiting devices. It can differentiate between portable mobile devices, desktop devices, SmartTVs and any other types of devices that have a web browser."


[dependencies]
ureq = { version = "*", features = ["json", "charset"] }
lru = "0.6.6"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
md5 = "0.7.0"
# the following dependencies are needed to make the hyper example work.
# you can comment them you don't want to keep or use it.
hyper = { version = "0.14.13", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }